# Index-Rebalancer

./: BRIEF.md  README.md  REAL_WORLD_CONSIDERATIONS.md  demo.py  pyproject.toml
src/: index_rebalancer.py
tests/: test_index_rebalancer.py
tests/fixtures/: simple.csv
