[project]
name = "index-rebalancer"
version = "0.1.0"
description = "Rebalancer for market cap weighted index fund"
authors = [
    {name = "Lewis Hyman",email = "lewishymanpersonal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
